--- a/1-sst.ipynb
+++ b/1-sst.ipynb
@@ -248,13 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "80766a67",
    "metadata": {},
    "outputs": [],
    "source": [
     "storm_count = 750\n",
-    "storm_catalog = np.sort(np.array(p_obs))[-750:]\n",
+    "storm_catalog = np.sort(np.array(p_obs))[-storm_count:]\n",
     "lambda_catalog = storm_count / observed_record_length\n",
     "lambda_catalog /= 365"
    ]
@@ -356,11 +356,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e4cb9df",
+   "cell_type": "markdown",
+   "id": "7e9c9739",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Note the bias for frequent events.  We'll touch on that next in #2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51d3e492",
+   "metadata": {},
    "source": []
   }
  ],
